--- a/package.json
+++ b/package.json
@@ -8,10 +8,8 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
+  "devDependencies": {
     "esbuild": "^0.15.18",
-    "prettier": "^2.8.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "prettier": "^2.8.0"
   }
 }
