--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
   "license": "ISC",
   "devDependencies": {
     "esbuild": "^0.15.18",
+    "esbuild-plugin-external-global": "^1.0.1",
     "prettier": "^2.8.0"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1"
   }
 }
